--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="empty_clinic">No clinics found! Try to add by clicking \n on plus button at the top.</string>
     <string name="title_activity_category">CategoryActivity</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
+    <string name="super_admin_dashboard_fragment_label">Super Admin Dashboard Fragment</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
 </resources>
