Signup and Booking implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="signup">Sign Up </string>
     <string name="signin">Sign In</string>
     <string name="title_activity_signup">SignupActivity</string>
+
+    <string name="back"><![CDATA[<-]]></string>
+    <string name="forward"><![CDATA[->]]></string>
 </resources>
