long and latitude

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="title_activity_schedule_appointment">ScheduleAppointment</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
+    <string name="title_activity_search_doctors_list">SearchDoctorsListActivity</string>
 </resources>
