--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="title_activity_search_doctors_list">SearchDoctorsListActivity</string>
+    <string name="title_activity_categories_by_doctor">CategoriesByDoctorActivity</string>
 </resources>
