--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,6 @@
     <string name="title_activity_deny_apoointment_clinic_admin_specific_main">
         DenyApoointmentClinicAdminSpecificMainActivity
     </string>
+    <string name="title_activity_accept_appointment_admin_main">AcceptAppointmentAdminMainActivity
+    </string>
 </resources>
