SuperAdmin Pending appointment view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,7 @@
     </string>
     <string name="title_activity_accept_appointment_admin_main">AcceptAppointmentAdminMainActivity
     </string>
+    <string name="title_activity_accept_deny_appointment_admin_main">
+        AcceptDenyAppointmentAdminMainActivity
+    </string>
 </resources>
